--- a/Backend/07-22/ECMAScript/destructure-assign.html
+++ b/Backend/07-22/ECMAScript/destructure-assign.html
@@ -77,6 +77,7 @@
 
       // 객체의 비구조화 할당방식 사용하기
       const { front, backend, server, getAuthor } = techTrend;
+      console.log(front, backend, server, getAuthor());
     </script>
   </body>
 </html>
