--- a/Backend/07-22/ECMAScript/function.html
+++ b/Backend/07-22/ECMAScript/function.html
@@ -28,6 +28,26 @@
 
       var result0 = plus0(10, 20);
       console.log("plus0(10, 20)=", result0);
+
+      // 익명함수 방식 정의
+      // 함수명없이 함수 기능을 정의하기
+      var plus1 = function (a, b) {
+        return a + b;
+      };
+
+      var result1 = plus1(100, 200);
+      console.log("plus1(100, 200)=", result1);
+
+      // 화살표함수 방식 정의
+      var plus2 = (a, b) => {
+        return a + b;
+      };
+      var plus3 = (a, b) => a + b;
+
+      var result2 = plus2(1000, 2000);
+      var result3 = plus3(10000, 20000);
+      console.log("plus2(1000, 2000)=", result2);
+      console.log("plus3(10000, 20000)=", result3);
     </script>
   </body>
 </html>
