--- a/Backend/07-24/node-restapi-app/public/front/list.html
+++ b/Backend/07-24/node-restapi-app/public/front/list.html
@@ -152,9 +152,7 @@
               <button type="button" id="btnSearch" class="btn btn-primary">
                 조회
               </button>
-              <a href="/front/create.html" class="btn btn-info"
-                >신규게시글작성</a
-              >
+              <a href="/front/create.html" class="btn btn-info">신규게시글</a>
             </div>
           </div>
 
@@ -175,8 +173,8 @@
                           <th width="10%">등록일시</th>
                         </tr>
                       </thead>
-                      <tbody class="hoverTblBody">
-                        <tr>
+                      <tbody class="hoverTblBody" id="list">
+                        <!-- <tr>
                           <td>1</td>
                           <td><a href="/front/modify?id=1">제목1입니다.</a></td>
                           <td>111.111.111.111</td>
@@ -184,7 +182,7 @@
                           <td>게시중</td>
                           <td>강창훈(1)</td>
                           <td>2024-07-24</td>
-                        </tr>
+                        </tr> -->
                       </tbody>
                     </table>
                   </div>
@@ -223,11 +221,32 @@
     <script>
       // 현재 html 문서가 웹브라우저에 모두 완전히 로딩이 완료되면 지정한 콜백함수를 실행시켜라: ready("콜백함수")
       $(document).ready(function () {
-        // JQuery의 AJAX를 이용해 백엔드 RESTAPI 주소를 호출하여 데이터를 가져온다.
-        // get("백엔드 RESTAPI 호출주소", 콜백함수(서버에서 보내준 데이터))
+        // JQuery의 AJAX를 이용해 백엔드 REST API 주소를 호출하여 데이터를 가져온다.
+        // get("백엔드 REST API 호출주소", 콜백함수(서버에서 보내준 데이터))
         $.get("http://localhost:3000/api/articles/list", function (result) {
           // 웹브라우저 개발자도구 콘솔탭에 로깅해본다. 잘 넘어오는지 아닌지
           console.log("백엔드 RESTful API에서 제공된 데이터:", result);
+
+          // REST API 서버에서 제공된 데이터 수만큼 반복적으로
+          // 동적으로 html 소스를 추가해 웹페이지 특정 요소에 자식 요소를 추가한다.
+
+          // 데이터 목록을 반복해서 뭔가 작업할 때 사용
+          // .each("배열데이터", 배열에서 하나씩 꺼내 로직을 구현하는 함수)
+          $.each(result.data, function (index, item) {
+            const trTag = `<tr>
+                          <td>${item.article_id}</td>
+                          <td><a href="/front/modify?id=${item.article_id}">${item.title}</a></td>
+                          <td>${item.ip_address}</td>
+                          <td>${item.view_cnt}</td>
+                          <td>${item.display}</td>
+                          <td>${item.regist_id}</td>
+                          <td>${item.regist_date}</td>
+                        </tr>`;
+
+            // $("#html id값으로 html요소를 불러온다.")
+            // tdody태그를 찾아서 태그 안에 trTag를 추가(append(추가할 요소))한다.
+            $("#list").append(trTag);
+          });
         });
       });
     </script>
