--- a/Backend/final/front-chat-app/login.html
+++ b/Backend/final/front-chat-app/login.html
@@ -1,93 +1,162 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-	<head>
-		<!-- Required meta tags -->
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-		<!-- Meta -->
-		<meta name="description" content="Quick Chat App">
-		<meta name="author" content="ParkerThemes">
-		<link rel="shortcut icon" href="img/fav.png" />
+    <!-- Meta -->
+    <meta name="description" content="Quick Chat App" />
+    <meta name="author" content="ParkerThemes" />
+    <link rel="shortcut icon" href="img/fav.png" />
 
-		<!-- Title -->
-		<title>Quick Chat App</title>
+    <!-- Title -->
+    <title>Quick Chat App</title>
 
-
-		<!-- *************
+    <!-- *************
 			************ Common Css Files *************
 		************ -->
-		<!-- Bootstrap css -->
-		<link rel="stylesheet" href="css/bootstrap.min.css">
-		
-		<!-- Main css -->
-		<link rel="stylesheet" href="css/main.css">
+    <!-- Bootstrap css -->
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
 
+    <!-- Main css -->
+    <link rel="stylesheet" href="css/main.css" />
 
-		<!-- *************
+    <!-- *************
 			************ Vendor Css Files *************
 		************ -->
-
-	</head>
-	<body class="authentication">
-
-		<!-- *************
+  </head>
+  <body class="authentication">
+    <!-- *************
 			************ Login container start *************
 		************* -->
-		<div class="login-container">
-			
-			<!-- Row start -->
-			<div class="row no-gutters h-100">
-				<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
-					<div class="login-about">
-						<div class="slogan">
-							<span>Design</span>
-							<span>Made</span>
-							<span>Simple.</span>
-						</div>
-						<div class="about-desc">
-							Quick Chat is an intelligent and communications tool, built for teams. It provides an integrated platform that makes team communication easy and efficient. 
-						</div>
-						<a href="index.html" class="know-more">Know More <img src="img/right-arrow.svg"></a>
-
-					</div>
-				</div>
-				<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
-					<div class="login-wrapper">
-						<form action="index.html">
-							<div class="login-screen">
-								<div class="login-body">
-									<a href="index.html" class="login-logo">
-										<img src="img/logo.svg" alt="Quick Chat">
-									</a>
-									<h6>Welcome back,<br>Please login to your account.</h6>
-									<div class="field-wrapper">
-										<input type="email" autofocus>
-										<div class="field-placeholder">Email ID</div>
-									</div>
-									<div class="field-wrapper mb-3">
-										<input type="password">
-										<div class="field-placeholder">Password</div>
-									</div>
-									<div class="actions">
-										<a href="forgot-password.html">Forgot password?</a>
-										<button type="submit" class="btn btn-primary">Login</button>
-									</div>
-								</div>
-								<div class="login-footer">
-									<span class="additional-link">No Account? <a href="signup.html" class="btn btn-secondary">Sign Up</a></span>
-								</div>
-							</div>
-						</form>
-					</div>
-				</div>
-			</div>
-			<!-- Row end -->
-
-		</div>
-		<!-- *************
+    <div class="login-container">
+      <!-- Row start -->
+      <div class="row no-gutters h-100">
+        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
+          <div class="login-about">
+            <div class="slogan">
+              <span>Design</span>
+              <span>Made</span>
+              <span>Simple.</span>
+            </div>
+            <div class="about-desc">
+              Quick Chat is an intelligent and communications tool, built for
+              teams. It provides an integrated platform that makes team
+              communication easy and efficient.
+            </div>
+            <a href="index.html" class="know-more"
+              >Know More <img src="img/right-arrow.svg"
+            /></a>
+          </div>
+        </div>
+        <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
+          <div class="login-wrapper">
+            <!-- 로그인 폼 영역 -->
+            <form id="loginForm">
+              <div class="login-screen">
+                <div class="login-body">
+                  <a href="index.html" class="login-logo">
+                    <img src="img/logo.svg" alt="Quick Chat" />
+                  </a>
+                  <h6>환영합니다.<br />로그인을 진행해주세요.</h6>
+                  <div class="field-wrapper">
+                    <input type="email" id="email" autofocus />
+                    <div class="field-placeholder">메일주소</div>
+                  </div>
+                  <div class="field-wrapper mb-3">
+                    <input type="password" id="password" />
+                    <div class="field-placeholder">암호</div>
+                  </div>
+                  <div class="actions">
+                    <a href="forgot-password.html">암호를 잊었나요?</a>
+                    <button type="submit" class="btn btn-primary">
+                      로그인
+                    </button>
+                  </div>
+                </div>
+                <div class="login-footer">
+                  <span class="additional-link"
+                    >계정이 없다면
+                    <a href="signup.html" class="btn btn-secondary"
+                      >회원가입</a
+                    ></span
+                  >
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+      <!-- Row end -->
+    </div>
+    <!-- *************
 			************ Login container end *************
 		************* -->
 
-	</body>
+    <!-- Required jQuery first, then Bootstrap Bundle JS -->
+    <script src="js/jquery.min.js"></script>
+
+    <script>
+      // 로그인폼 유효성 검사 진행 및 백엔드 로그인 API 호출
+      $("#loginForm").submit(function (e) {
+        // form submit 이벤트 실행 취소(화면 재로딩 방지)
+        e.preventDefault();
+
+        // Step1: 사용자 입력값의 유효성 검증하기
+        if ($("#email").val() == "") {
+          alert("메일주소를 입력해주세요.");
+          $("#email").focus();
+          return false;
+        }
+        if ($("#password").val() == "") {
+          alert("암호를 입력해주세요.");
+          $("#password").focus();
+          return false;
+        }
+
+        // Step2: 사용자 입력값을 UI요소에서 추출하여 JSON데이터를 생성한다.
+        // 백엔드에 전달할 회원 정보 정의하기
+        var member = {
+          email: $("#email").val(),
+          password: $("#password").val(),
+        };
+
+        // Step3: UI요소에서 추출한 JSON데이터를 백엔드 RESTful API에 전달해서 로그인 처리한다.
+        // Jquery의 AJAX를 이용해 POST 방식으로 백엔드 API 주소에 데이터를 전달한다.
+        $.post("http://localhost:5000/api/member/login", member).done(function (
+          result
+        ) {
+          // 백엔드에서의 처리결과값 확인하기
+          console.log("백엔드에서의 처리결과값 확인하기:", result);
+
+          if (result.code == 200) {
+            // Step4: 백엔드에서 제공해준 JWT 토큰값을  웹브라우저 로컬스토리지 공간에 저장한다.
+            localStorage.setItem("chatMemberToken", result.data);
+
+            // index.html 채팅 웹페이지로 이동시키기
+            location.href = "./index.html";
+          } else {
+            if (result.code == 400 && result.msg == "NotExistEmail") {
+              alert("존재하지 않는 이메일입니다.");
+              $("#email").val("");
+              $("#email").focus();
+            } else if (
+              result.code == 400 &&
+              result.msg == "IncorrectPassword"
+            ) {
+              alert("암호가 일치하지 않습니다.");
+              $("#password").val("");
+              $("#password").focus();
+            } else {
+              alert("로그인에 실패했습니다.");
+            }
+          }
+        });
+      });
+    </script>
+  </body>
 </html>
