--- a/Backend/final/front-chat-app/login.html
+++ b/Backend/final/front-chat-app/login.html
@@ -127,35 +127,35 @@
 
         // Step3: UI요소에서 추출한 JSON데이터를 백엔드 RESTful API에 전달해서 로그인 처리한다.
         // Jquery의 AJAX를 이용해 POST 방식으로 백엔드 API 주소에 데이터를 전달한다.
-        $.post("http://localhost:5000/api/member/login", member).done(function (
-          result
-        ) {
-          // 백엔드에서의 처리결과값 확인하기
-          console.log("백엔드에서의 처리결과값 확인하기:", result);
+        $.post("http://cbnu06.wechatmaker.com/api/member/login", member).done(
+          function (result) {
+            // 백엔드에서의 처리결과값 확인하기
+            console.log("백엔드에서의 처리결과값 확인하기:", result);
 
-          if (result.code == 200) {
-            // Step4: 백엔드에서 제공해준 JWT 토큰값을  웹브라우저 로컬스토리지 공간에 저장한다.
-            localStorage.setItem("chatMemberToken", result.data);
+            if (result.code == 200) {
+              // Step4: 백엔드에서 제공해준 JWT 토큰값을  웹브라우저 로컬스토리지 공간에 저장한다.
+              localStorage.setItem("chatMemberToken", result.data);
 
-            // index.html 채팅 웹페이지로 이동시키기
-            location.href = "./index.html";
-          } else {
-            if (result.code == 400 && result.msg == "NotExistEmail") {
-              alert("존재하지 않는 이메일입니다.");
-              $("#email").val("");
-              $("#email").focus();
-            } else if (
-              result.code == 400 &&
-              result.msg == "IncorrectPassword"
-            ) {
-              alert("암호가 일치하지 않습니다.");
-              $("#password").val("");
-              $("#password").focus();
+              // index.html 채팅 웹페이지로 이동시키기
+              location.href = "./index.html";
             } else {
-              alert("로그인에 실패했습니다.");
+              if (result.code == 400 && result.msg == "NotExistEmail") {
+                alert("존재하지 않는 이메일입니다.");
+                $("#email").val("");
+                $("#email").focus();
+              } else if (
+                result.code == 400 &&
+                result.msg == "IncorrectPassword"
+              ) {
+                alert("암호가 일치하지 않습니다.");
+                $("#password").val("");
+                $("#password").focus();
+              } else {
+                alert("로그인에 실패했습니다.");
+              }
             }
           }
-        });
+        );
       });
     </script>
   </body>
