--- a/Backend/final/front-chat-app/signup.html
+++ b/Backend/final/front-chat-app/signup.html
@@ -153,18 +153,18 @@
 
         // Step3: UI요소에서 추출한 JSON데이터를 백엔드 RESTful API에 전달해서 회원가입 처리한다.
         // Jquery의 AJAX를 이용해 POST 방식으로 백엔드 API 주소에 데이터를 전달한다.
-        $.post("http://localhost:5000/api/member/entry", member).done(function (
-          result
-        ) {
-          // 백엔드에서의 처리결과값 확인하기
-          console.log("백엔드에서의 처리결과값 확인하기:", result);
+        $.post("http://cbnu06.wechatmaker.com/api/member/entry", member).done(
+          function (result) {
+            // 백엔드에서의 처리결과값 확인하기
+            console.log("백엔드에서의 처리결과값 확인하기:", result);
 
-          if (result.code == 200) {
-            location.href = "./login.html";
-          } else {
-            alert("회원가입에 실패했습니다. \n관리자에게 문의하세요.");
+            if (result.code == 200) {
+              location.href = "./login.html";
+            } else {
+              alert("회원가입에 실패했습니다. \n관리자에게 문의하세요.");
+            }
           }
-        });
+        );
 
         // Step4: 백엔드 데이터 처리 결과에 따른 추가 정보를 사용자에게 전달한다.
       });
