--- a/Backend/final/front-chat-app/login.html
+++ b/Backend/final/front-chat-app/login.html
@@ -127,7 +127,7 @@
 
         // Step3: UI요소에서 추출한 JSON데이터를 백엔드 RESTful API에 전달해서 로그인 처리한다.
         // Jquery의 AJAX를 이용해 POST 방식으로 백엔드 API 주소에 데이터를 전달한다.
-        $.post("http://cbnu06.wechatmaker.com/api/member/login", member).done(
+        $.post("https://cbnu06.wechatmaker.com/api/member/login", member).done(
           function (result) {
             // 백엔드에서의 처리결과값 확인하기
             console.log("백엔드에서의 처리결과값 확인하기:", result);
