--- a/Frontend/01-FrontBasic/index.html
+++ b/Frontend/01-FrontBasic/index.html
@@ -41,6 +41,13 @@
       console.error("페이지 로딩시 에러메시지 출력하기");
       console.warn("페이지 로딩시 경고메시지 출력하기");
       console.info("페이지 로딩시 정보메시지 출력하기");
+
+      // 코드 내에서 디버거 사용법1 (권장되지않는방법)
+      // debugger;
+
+      console.log("로직 1 실행되었습니다.");
+      console.log("로직 2 실행되었습니다.");
+      console.log("로직 3 실행되었습니다.");
     </script>
   </body>
 </html>
